--- a/requirements.txt/requirements.txt
+++ b/requirements.txt/requirements.txt
@@ -1,6 +1,7 @@
 streamlit
-opencv-python-headless
-numpy
+opencv-python-headless==4.10.0.84
+numpy==1.26.4
+streamlit
 pandas
 fpdf
 torch
@@ -10,4 +11,3 @@ plotly
 deepface
 pytesseract
 PyMuPDF
-pyttsx3
